--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             android:label="Game"
             android:theme="@style/AppTheme"
             />
+        <activity android:name=".ResultActivity"></activity>
+
     </application>
 
 </manifest>
